<resources>
    <string name="app_name">eWorkout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_the_app">Explore the App</string>
    <string name="lets_start">Lets Start</string>
    <string name="app_description">eWorkout is an application that can be downloaded on any mobile device and used anywhere to get fit. It is designed to help with exercise, other types of physical training and other ways to get fit.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_here">Login here</string>
    <string name="anonymous_auth">Or use app as guest</string>
    <string name="not_register_yet">Not register yet?</string>
    <string name="create_account">Create Account</string>
    <string name="ERROR_FIRST_NAME_EMPTY">First name can not be empty!</string>
    <string name="ERROR_FIRST_NAME_LENGTH">First name must greater than 3 characters!</string>
    <string name="ERROR_LAST_NAME_EMPTY">Last name can not be empty!</string>
    <string name="ERROR_LAST_NAME_LENGTH">Last name must greater than 3 characters!</string>
    <string name="ERROR_EMAIL_EMPTY">Email can not be empty!</string>
    <string name="ERROR_EMAIL_FORMAT">Invalid email format!</string>
    <string name="ERROR_USED_EMAIL">Email is used by another account!</string>
    <string name="ERROR_PASSWORD_EMPTY">Password can not be empty!</string>
    <string name="ERROR_PASSWORD_LENGTH">Password must greater than 8 characters!</string>
    <string name="ERROR_WRONG_PASSWORD">Wrong Password!</string>
    <string name="ERROR_CONFIRM_PASSWORD_MATCH">Confirm password does not match!</string>
    <string name="web_client_id">521031319461-t020snnbqqjk81djnlmoetl791idg7r5.apps.googleusercontent.com</string>
    <string name="set_name">Set Name</string>
    <string name="_12_exercise_10_mins_320_calories_burn">12 Exercise | 10 mins | 320 Calories Burn</string>
    <string name="exercises">Exercises</string>
    <string name="_3_sets">3 Sets</string>
    <string name="start_workout">Start Workout</string>
    <string name="set_1">Set 1</string>
    <string name="warm_up">Warm up</string>
    <string name="_05_15">05:15</string>
    <string name="description">Description</string>
    <string name="how_to_do_it">How to do it</string>
    <string name="spread_your_arm_oh_yeah">Spread your arm oh yeah</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="user_name">Hahaha</string>
    <string name="daily_workout_schedule">Daily Workout Schedule</string>
    <string name="activity_status">Activity Status</string>
    <string name="what_you_wanna_train">What Do You Want To Train?</string>
    <string name="check">Check</string>
    <string name="calories">Calories</string>
    <string name="workout_hours">Workout Hours</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="search">Search</string>
    <string name="discover">Discover</string>
    <string name="setting">Setting</string>
    <string name="rest">Rest</string>
    <string name="_10s">+10s</string>
    <string name="skip">Skip</string>
    <string name="next_2_11">Next 2/11</string>
    <string name="next">Next</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="create_new_set">Create new set</string>
    <string name="custom">Custom</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
</resources>