<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="28.8dp"
        android:layout_marginEnd="28.8dp"
        tools:context=".training.view.WorkoutDetail2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="57.6dp"
            android:background="@drawable/btn_close_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/exercises_name_textview"
            style="@style/TextView1"
            android:text="@string/hello_blank_fragment"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/exercises_information_textview"
            style="@style/TextView2"
            android:text="@string/hello_blank_fragment"
            app:layout_constraintStart_toStartOf="@+id/exercises_name_textview"
            app:layout_constraintTop_toBottomOf="@+id/exercises_name_textview" />

        <TextView
            android:id="@+id/description_hardcode_textview"
            style="@style/TextView1"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/exercises_information_textview"
            app:layout_constraintTop_toBottomOf="@+id/exercises_information_textview" />

        <TextView
            android:id="@+id/description_textview"
            style="@style/TextView2"
            android:text="@string/app_description"
            app:layout_constraintStart_toStartOf="@+id/description_hardcode_textview"
            app:layout_constraintTop_toBottomOf="@+id/description_hardcode_textview" />

        <TextView
            android:id="@+id/htdi_textview"
            style="@style/TextView1"
            android:text="@string/how_to_do_it"
            app:layout_constraintStart_toStartOf="@+id/description_textview"
            app:layout_constraintTop_toBottomOf="@+id/description_textview" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/how_to_do_recyclerview_item"
            app:layout_constraintStart_toStartOf="@+id/htdi_textview"
            app:layout_constraintTop_toBottomOf="@+id/htdi_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
