<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".training.view.WorkoutDetail1"
        android:background="@drawable/blue_linear">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="28.8dp"
            android:layout_marginTop="57.6dp"
            android:background="@drawable/btn_navigate_up_backgroundd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28.8dp"
            android:src="@drawable/jumping_rope"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/left_right_top_corner_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/set_name_TextView"
                style="@style/TextView1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/set_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/set_information_TextView"
                style="@style/TextView2"
                android:layout_marginTop="40dp"
                android:text="@string/_12_exercise_10_mins_320_calories_burn"
                app:layout_constraintStart_toStartOf="@id/set_name_TextView"
                app:layout_constraintTop_toTopOf="@id/set_name_TextView" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextView1"
                android:layout_marginTop="40dp"
                android:text="@string/exercises"
                app:layout_constraintStart_toStartOf="@id/set_information_TextView"
                app:layout_constraintTop_toTopOf="@id/set_information_TextView" />

            <TextView
                android:id="@+id/number_of_set_textview"
                style="@style/TextView2"
                android:text="@string/_3_sets"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_start"
                app:layout_constraintEnd_toEndOf="@+id/number_of_set_textview"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start"
                style="@style/Button3"
                android:background="@drawable/blue_linear_button"
                android:text="@string/start_workout"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>