<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.eworkout.training.viewmodel.Workout1ViewModel" />

        <variable
            name="hideShimmerLayout"
            type="Boolean" />
        <variable
            name="hideDataLayout"
            type="Boolean" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <!-- <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:isGone="@{hideShimmerLayout}">
            <include layout="@layout/workout_detail1_loading" />
        </com.facebook.shimmer.ShimmerFrameLayout> -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isGone="@{hideDataLayout}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:background="@drawable/blue_linear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="28.8dp"
                    android:layout_marginTop="57.6dp"
                    android:background="@drawable/btn_navigate_up_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/rest_TextView"
                    style="@style/TextView7"
                    android:text="@string/rest"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button" />

                <TextView
                    android:id="@+id/set_name_TextView"
                    style="@style/TextView5"
                    android:layout_marginTop="32dp"
                    android:text="@{viewModel.currentExercise.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ProgressBar
                    android:id="@+id/count_down_progressbar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:indeterminateOnly="false"
                    android:max="10000"
                    android:progressDrawable="@drawable/progress_bar_background"
                    app:layout_constraintEnd_toEndOf="@+id/rest_TextView"
                    app:layout_constraintStart_toStartOf="@+id/rest_TextView"
                    app:layout_constraintTop_toBottomOf="@+id/rest_TextView" />

                <TextView
                    android:id="@+id/reps_textview"
                    style="@style/TextView6"
                    android:text="@{viewModel.currentExercise.reps}"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="@+id/count_down_progressbar"
                    app:layout_constraintEnd_toEndOf="@+id/count_down_progressbar"
                    app:layout_constraintStart_toStartOf="@+id/count_down_progressbar"
                    app:layout_constraintTop_toTopOf="@+id/count_down_progressbar" />

                <TextView
                    android:id="@+id/add_10s_TextView"
                    style="@style/TextView8"
                    android:text="@string/_10s"
                    app:layout_constraintStart_toStartOf="@+id/count_down_progressbar"
                    app:layout_constraintTop_toBottomOf="@+id/count_down_progressbar" />

                <TextView
                    android:id="@+id/skip_TextView"
                    style="@style/TextView8"
                    android:text="@string/skip"
                    app:layout_constraintEnd_toEndOf="@+id/count_down_progressbar"
                    app:layout_constraintTop_toBottomOf="@+id/count_down_progressbar" />

                <TextView
                    android:id="@+id/next_TextView"
                    style="@style/TextView2"
                    android:layout_marginTop="57.6dp"
                    android:text="@string/next_2_11"
                    app:layout_constraintStart_toStartOf="@+id/button"
                    app:layout_constraintTop_toBottomOf="@+id/add_10s_TextView" />


                <TextView
                    android:id="@+id/next_evercise_TextView"
                    style="@style/TextView4"
                    android:text="Push-ups-provip"
                    app:layout_constraintStart_toStartOf="@+id/next_TextView"
                    app:layout_constraintTop_toBottomOf="@+id/next_TextView" />

                <TextView
                    android:id="@+id/next_reps_TextView"
                    style="@style/TextView4"
                    android:layout_marginEnd="27.6dp"
                    android:text="8x"
                    app:layout_constraintBottom_toBottomOf="@+id/next_evercise_TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/next_evercise_TextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/left_right_top_corner_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/background_imageview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/jumping_rope"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="500dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>